@@ -1,37 +1,38 @@
 package com.codecounty.java.advance.internationalization;
+
 import java.util.*;
 
 public class I18NSample {
 
-    static public void main(String[] args) {
+	static public void main(String[] args) {
 
-        String language;
-        String country;
+		String language;
+		String country;
 
-        if (args.length != 2) {
-            language = new String("en");
-            country = new String("US");
-            
+		if (args.length != 2) {
+			language = new String("en");
+			country = new String("US");
+
 //            language = new String("fr");
 //            country = new String("FR");
-           
+
 //            language = new String("de");
 //            country = new String("DE");
 
-        } else {
-            language = new String(args[0]);
-            country = new String(args[1]);
-        }
+		} else {
+			language = new String(args[0]);
+			country = new String(args[1]);
+		}
 
-        Locale currentLocale;
-        ResourceBundle messages;
+		Locale currentLocale;
+		ResourceBundle messages;
 
-//        currentLocale = new Locale(language, country);
-        currentLocale = Locale.of(language, country);
+       currentLocale = new Locale(language, country);
+		// currentLocale = Locale.of(language, country);
 
-        messages = ResourceBundle.getBundle("MessagesBundle", currentLocale);
-        System.out.println(messages.getString("greetings"));
-        System.out.println(messages.getString("inquiry"));
-        System.out.println(messages.getString("farewell"));
-    }
+		messages = ResourceBundle.getBundle("MessagesBundle", currentLocale);
+		System.out.println(messages.getString("greetings"));
+		System.out.println(messages.getString("inquiry"));
+		System.out.println(messages.getString("farewell"));
+	}
 }
